here I'm just testing the work

--- a/pages/choicePage.html
+++ b/pages/choicePage.html
@@ -17,6 +17,7 @@
 				font-family: "Poppins", sans-serif;
 			    font-style: normal;
 			}
+			
 		</style>
 	</head>
 	<body>
@@ -31,10 +32,10 @@
 			<nav>
 				<ul>
 					<li>
-						<a href="consultationOfEva.jsp">Consultation of evaluations</a>
+						<a href="/_manifestations_scientifiques/R?action=da">Consultation of evaluations</a> 
 					</li>
 					<li>
-						<a href="articleChoice.jsp">Make a decision</a>
+						<a href="/_manifestations_scientifiques/R?action=md">Make a decision</a> 
 					</li>
 				</ul>
 			</nav>
